syntax = "proto3";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "TrafficCourts.Ticket.Search.Service";

package ticket;

// The ticket search service definition.
service TicketSearch {
  // searches for a ticket
  rpc Search (SearchRequest) returns (SearchReply);
}

// The request message containing the user's name.
message SearchRequest {
  // Ticket number
  string number = 1;

  TimeOfDay time = 2;
}

// The response message containing the greetings.
message SearchReply {
  string violation_ticket_number = 1;
  TimeOfDay violation_time = 2;
  Date violation_date = 3;
  repeated Offence offences = 4;
}


// Represents a whole or partial calendar date, such as a birthday. The time of
// day and time zone are either specified elsewhere or are insignificant. The
// date is relative to the Gregorian Calendar. This can represent one of the
// following:
//
// * A full date, with non-zero year, month, and day values
// * A month and day value, with a zero year, such as an anniversary
// * A year on its own, with zero month and day values
// * A year and month value, with a zero day, such as a credit card expiration
// date
message Date {
  // Year of the date. Must be from 1 to 9999, or 0 to specify a date without
  // a year.
  int32 year = 1;

  // Month of a year. Must be from 1 to 12, or 0 to specify a year without a
  // month and day.
  int32 month = 2;

  // Day of a month. Must be from 1 to 31 and valid for the year and month, or 0
  // to specify a year by itself or a year and month where the day isn't
  // significant.
  int32 day = 3;
}

// Represents a time of day. The date and time zone are either not significant
// or are specified elsewhere.
message TimeOfDay {
  // Hours of day in 24 hour format. Should be from 0 to 23. An API may choose
  // to allow the value "24:00:00" for scenarios like business closing time.
  int32 hour = 1;

  // Minutes of hour of day. Must be from 0 to 59.
  int32 minute = 2;
}

message Offence {
	int32 offence_number = 1;
	int32 ticketed_amount = 2;
	int32 amount_due = 3;
	string offence_description = 4;
	string vehicle_description = 5;
	int32 discount_amount = 6;
	Date discount_due_date = 7;
	string invoice_type = 8;
}